--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@ body {
   height: 100vh;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .logo-container img {
   max-width: 100%;
   height: auto;
